# options-viewer

./: GEMINI.md  README.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/enhance_ohlc_chart_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/refine_options_table_20251220/: metadata.json  plan.md  spec.md
options-viewer-tauri/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
options-viewer-tauri/coverage/: clover.xml  coverage-final.json  index.html
options-viewer-tauri/coverage/components/: OptionsTable.tsx.html  index.html
options-viewer-tauri/coverage/types/: index.html  index.ts.html
options-viewer-tauri/src/: App.css  App.tsx  index.css
options-viewer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
options-viewer-tauri/src-tauri/src/: lib.rs
options-viewer-tauri/src-tauri/src/commands/: expirations.rs  mod.rs  ohlc.rs  options.rs  price.rs  search.rs  stream.rs  types.rs
options-viewer-tauri/src-tauri/src/tradingview/: mod.rs  price_stream.rs  websocket.rs
options-viewer-tauri/src/components/: ExpirySelector.tsx  OHLCModal.tsx  OptionsTable.test.tsx  OptionsTable.tsx  PriceDisplay.tsx  SymbolSearch.tsx  ThemeToggle.tsx
options-viewer-tauri/src/context/: ThemeContext.tsx
options-viewer-tauri/src/hooks/: useTauriCommands.ts
options-viewer-tauri/src/test/: setup.ts
options-viewer-tauri/src/types/: index.ts
options-viewer-tauri/src/utils/: chartUtils.test.ts  chartUtils.ts
